force-app/main/default/objects/Claim__c/fields/Impairement__c.field-meta.xml
<CustomField>
    <fullName>Impairement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impairement</label>
    <type>Checkbox</type>
</CustomField>