force-app/main/default/objects/Claim__c/fields/injurydate__c.field-meta.xml
<CustomField>
    <fullName>injurydate__c</fullName>
    <label>injury date</label>
    <type>Date</type>
</CustomField>