force-app/main/default/objects/Claim__c/fields/RTW_Date__c.field-meta.xml
<CustomField>
    <fullName>RTW_Date__c</fullName>
    <label>RTW Date</label>
    <type>Date</type>
</CustomField>